checked out the change of vector fields with a different frames & added paricle to make visuals.

--- a/vector_field_visualisation/visualise_keypoints/index.html
+++ b/vector_field_visualisation/visualise_keypoints/index.html
@@ -8,6 +8,7 @@
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
   <script language="javascript" type="text/javascript" src="constants.js"></script>
   <script language="javascript" type="text/javascript" src="drawing_functions.js"></script>
+  <script language="javascript" type="text/javascript" src="paricle.js"></script>
   <script language="javascript" type="text/javascript" src="utils.js"></script>
   <script language="javascript" type="text/javascript" src="visualise_keypoints.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
